# python-for-everyone

./: .dockerignore  .gitignore  .gitmodules  .jupyter_notebook_config.py  Dockerfile  Makefile  README.md  Welcome.ipynb  conf.py  index.md  index.rst  pyproject.toml  requirements.txt  setup.py  testbanks.rst  testing.ipynb  welcome.ipynb
Lab/: drawing.py  tests.py  turtle.ipynb
Labs/: implement_head.ipynb  lab00_jupyter.ipynb  lab01_algorithms.ipynb  lab01_the_REPL.ipynb  lab02_strings.ipynb  lab03_formatting_and_html.ipynb  lab04_input.ipynb  lab05_files.ipynb  lab06_functions.ipynb  lab07_if_statements.ipynb  lab08_lists_and_loops.ipynb  lab09_dictionaries.ipynb  lab11_data_structures.ipynb  lab12_classes.ipynb  lab_accessing_files.ipynb  lab_l02_algorithms.ipynb  lab_l03_strings.ipynb  lab_l05_strings_and_vars.ipynb  lab_l06_lists.ipynb  lab_l07_dictionaries.ipynb  lab_l08_formatting.ipynb  lab_l08_input.ipynb  lab_l09_formatting_and_html.ipynb  lab_l10_functions.ipynb  lab_l10_input.ipynb  lab_l11_files.ipynb  lab_l11_functions.ipynb  lab_l11_input.ipynb  lab_l11_interactivity.ipynb  lab_l12_functions.ipynb  lab_l12_interactivity.ipynb  lab_l12_widgets.ipynb  lab_l13_files.ipynb  lab_l14_files.ipynb  lab_l14_if_statements.ipynb  lab_l15_if_statements.ipynb  lab_l15_loops.ipynb  lab_l16_loops.ipynb  lab_l17_algorithms.ipynb  lab_l17_dictionaries.ipynb  (+10 more)
Lesson01/: algorithms.ipynb  using_the_pen.ipynb
Lesson02/: algorithms.ipynb  literals.ipynb  operators.ipynb  pip.ipynb  practice_lab.ipynb  printing.ipynb  using_the_pen.ipynb  variables.ipynb
p4e/: drawing.py  (+5 more)
(+159 files in other folders)
